<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/broken_white"

    tools:context="com.hfad.portfolio.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:text="@string/main_title"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btn_movies"
        android:text="@string/popular_movies"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        android:layout_marginBottom="10dp"
        android:onClick="onClickShowToast"
        />

    <Button
        android:id="@+id/btn_stock_hawk"
        android:text="@string/stock_hawk"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        android:onClick="onClickShowToast"
       />

    <Button
        android:id="@+id/btn_build"
        android:text="@string/build_bigger"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        android:onClick="onClickShowToast"/>

    <Button
        android:id="@+id/btn_app_material"
        android:text="@string/app_material"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        android:onClick="onClickShowToast"/>

    <Button
        android:id="@+id/btn_ubiquitous"
        android:text="@string/ubiquitous"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        android:onClick="onClickShowToast"/>

    <Button
        android:id="@+id/btn_capstone"
        android:text="@string/capstone"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        android:onClick="onClickShowToast"/>
</LinearLayout>
